# spin-cycle

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/searxng/: settings.yml
docs/: 60-claim-batch-analysis-2026-03-11.md  60-claim-batch-analysis-2026-03-13.md  COMPARATIVE_CLAIMS_ANALYSIS.md  llm-calls.md  rubric-restructure-plan.md  seed-relevance-filtering.md  transcript-claim-pipeline.md  transcript-pipeline-plan.md  verdict-quality-issues-2026-03-10.md
scripts/: init_db.py
sql/: 002_thesis_extraction.sql
src/: llm.py  worker.py
src/activities/: transcript_activities.py  verify_activities.py
src/agent/: claim_category.py  decompose.py  graph.py  judge.py  nodes.py  research.py  state.py  synthesize.py
src/api/: app.py
src/data/: schemas.py  source_ratings_seed.json
src/db/: models.py  session.py
src/llm/: __init__.py  client.py  invoker.py  parser.py  placeholders.py  validators.py
src/prompts/: _archive_extraction.py  extraction.py  (+2 more)
tests/: advanced_claims.py  benchmark_concurrency.py  extraction_output_review.txt  iran_run1_evidence.txt  iran_run1_gov_stats.txt  iran_run1_subclaims.txt  iran_run1_verdicts.txt  regression_claims.py  regression_results_20260303_045205.json  regression_results_20260303_181316.json  regression_results_20260303_191052.json  regression_results_20260304_055053.json  rev_claims.py  stress_claims.py  test_evidence_ranker.py  test_graph.py  test_health.py  test_schemas.py
(+34 files in other folders)
